--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
    
-    <title>React App</title>
+    <title>Car for rent</title>
+     
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
