--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favikon.png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +11,7 @@
     />
    
     <title>Car for rent</title>
-     
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
